<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clip_board"
    tools:context=".Presentation.view.RegisterActivity">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/small_distance"
        android:text="@string/register"
        android:textSize="@dimen/large_size"
        android:fontFamily="cursive"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/extra_large_distance"
        android:text="@string/email"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/small_distance"
        android:textSize="@dimen/small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/medium_to_large_distance"
        android:text="@string/password"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/small_distance"
        android:textSize="@dimen/small_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        android:hint="@string/example_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        android:onClick="createAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_to_large_distance"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/medium_distance"
        android:text="@string/create_account"
        android:textSize="@dimen/small_size"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/backToLoginButton"
        android:onClick="goToLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_to_large_distance"
        android:layout_marginHorizontal="@dimen/medium_distance"
        android:layout_marginTop="@dimen/medium_distance"
        android:text="@string/back_to_login"
        android:textSize="@dimen/small_size"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>